login customer in progress

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,12 @@
-<p-drawer [(visible)]="visible" header="CIRSUB">
-  <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-      aliquip ex ea commodo consequat.
-  </p>
-</p-drawer>
-<p-button (click)="visibleDrawer()" icon="pi pi-arrow-right" />
+<nav class="h-full border-2 border-red-500">
+  <ul class="p-5">
+    <li class="font-semibold pb-7">Tramites</li>
+    <li class="font-semibold pb-7">Prestaciones</li>
+    <li class="font-semibold pb-7">Controles</li>
+    <li class="font-semibold pb-7">Equipos</li>
+    <li class="font-semibold pb-7">Actividades</li>
+    <li class="font-semibold pb-7">Novedades</li>
+    <li class="font-semibold pb-7">Experiencia</li>
+    <li class="font-semibold pb-7">Trbaja con nocostros</li>
+  </ul>
+</nav>
