--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,21 +1,28 @@
-<div class="card">
-  <p-menubar [model]="items">
-      <ng-template #start>
-        <img src="" alt="">
-      </ng-template>
-      <ng-template #item let-item let-root="root">
-          <a pRipple class="flex items-center p-menubar-item-link">
-              <span>{{ item.label }}</span>
-              <p-badge *ngIf="item.badge" [ngClass]="{ 'ml-auto': !root, 'ml-2': root }" [value]="item.badge" />
-              <span *ngIf="item.shortcut" class="ml-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1">{{ item.shortcut }}</span>
-              <i *ngIf="item.items" [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"></i>
+<div class="navbar bg-base-100 shadow-sm">
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl">Cirsub</a>
+  </div>
+  <div class="flex items-center gap-2">
+    <p class="font-semibold text-lg">Marcos Lopez</p>
+    <div class="dropdown dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+        <div class="w-10 rounded-full">
+          <img
+            alt="Tailwind CSS Navbar component"
+            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        </div>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li>
+          <a class="justify-between">
+            Perfil
           </a>
-      </ng-template>
-      <ng-template #end>
-          <div class="flex items-center gap-2">
-              <input type="text" pInputText placeholder="Search" class="w-36" />
-              <p-avatar class="cursor-pointer" image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"  size="large" shape="circle" />
-          </div>
-      </ng-template>
-  </p-menubar>
+        </li>
+        <li><a>Settings</a></li>
+        <li><a class="font-bold text-red-500">Salir</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
