refactoring code of login component

--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<section class="flex justify-center items-center h-screen bg-linear-to-r from-cyan-500 to-green-500">
+  <div>
+    <div class="card card-border bg-base-100 w-96 border-2  pb-5 px-5 shadow-2xl">
+      <div class="card-body">
+        <figure>
+          <img class="w-30 mb-2" src="cirsub.png" alt="">
+        </figure>
+
+      </div>
+      <div class="flex justify-center items-center mb-5">
+        <button class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Registrarme</button>
+      </div>
+      <p class="text-center text-gray-400 font-sans">Ya tiene una cuenta? <a routerLink="/auth/login" class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Iniciar sesión</a></p>
+    </div>
+  </div>
+</section>
+
+
