--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<section class="grid gap-2 m-4 sm:grid-cols-12 sm:grid-rows-12">
-  <app-header class="col-span-12 row-span-1 rounded-lg"></app-header>
-  <app-sidebar class="col-span-2 row-span-11 rounded-lg"></app-sidebar>
-  <app-table class="col-span-10 row-span-11 rounded-lg"></app-table>
-  <app-footer class="col-span-12 row-span-1 rounded-lg"></app-footer>
+<section class="grid gap-2 sm:grid-cols-12 sm:grid-rows-12">
+  <app-header class="col-span-12 row-span-1"></app-header>
+  <app-sidebar class="col-span-2 row-span-11"></app-sidebar>
+  <app-table class="col-span-10 row-span-11"></app-table>
+  <app-footer class="col-span-12 row-span-1"></app-footer>
 </section>
