--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,32 +1,44 @@
 <section class="flex justify-center items-center h-screen bg-linear-to-r from-cyan-500 to-green-500">
   <div>
-    <div class="card card-border bg-base-100 w-96 border-2  pb-5 px-5 shadow-emerald-500">
+    <div class="card card-border bg-base-100 w-96 border-2  pb-5 px-5 shadow-2xl">
       <div class="card-body">
         <figure>
-          <img class="w-40 mb-2" src="cirsub.png" alt="">
+          <img class="w-30 mb-2" src="cirsub.png" alt="">
         </figure>
-        <label class="input validator mb-2">
-          <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></g></svg>
-          <input type="email" placeholder="mail@site.com" required/>
-        </label>
-        <div class="validator-hint hidden">Email Inválido</div>
-        <label class="input validator">
-          <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z"></path><circle cx="16.5" cy="7.5" r=".5" fill="currentColor"></circle></g></svg>
-          <input  type="password" required placeholder="Password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
-        </label>
-        <p class="validator-hint hidden">
-          Must be more than 8 characters, including
-          <br/>At least one number
-          <br/>At least one lowercase letter
-          <br/>At least one uppercase letter
-        </p>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <fieldset class="fieldset">
+            <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su email</legend>
+            <label class="input input-success validator">
+              <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></g></svg>
+              <input formControlName="email" autocomplete="new-password" type="email" placeholder="mail@cirsubgn.org" required/>
+            </label>
+          </fieldset>
+          <fieldset class="fieldset mb-2">
+            <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su contraseña</legend>
+            <label class="input input-success validator">
+              <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z"></path><circle cx="16.5" cy="7.5" r=".5" fill="currentColor"></circle></g></svg>
+            <input formControlName="password" autocomplete="new-password"  type="password" required placeholder="Password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
+            </label>
+          </fieldset>
+          <p class="text-left text-gray-400 font-sans">Olvidó su contraseña? <a routerLink='/auth/register' routerLinkActive="router-link-active"  class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Recuperarla</a></p>
+          <div class="flex justify-center items-center mb-5">
+            <button type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Ingresar</button>
+          </div>
+        </form>
       </div>
-      <div class="flex justify-center items-center mb-5">
-        <button class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Ingresar</button>
-      </div>
-      <p class="text-center text-gray-500 font-normal">No tiene un acuenta aún? <a class="font-bold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent" href="">Regístrese</a></p>
+
+      <p class="text-center text-gray-400 font-sans">No tiene una cuenta aún? <a routerLink='/auth/register' routerLinkActive="router-link-active"  class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Registrarme</a></p>
     </div>
   </div>
 </section>
+
+@if (hasError()) {
+  <div role="alert" class="alert alert-error animate__fadeInRight fixed bottom-5 right-5">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+    </svg>
+    <span>Por favor revise a informacion ingresada</span>
+  </div>
+}
 
 
