--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,12 +1,14 @@
-<div class="navbar bg-base-100 shadow-sm">
+<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 shadow-sm px-5 py-5">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">Cirsub</a>
+    <figure>
+      <img class="w-25" src="/cirsub.png" alt="">
+    </figure>
   </div>
   <div class="flex items-center gap-2">
-    <p class="font-semibold text-lg">Marcos Lopez</p>
-    <div class="dropdown dropdown-end">
-      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
+    <p class="font-semibold text-white text-lg drop-shadow-lg">Marcos Lopez</p>
+    <div class="dropdown dropdown-end  rounded-sm">
+      <div tabindex="0" role="button" class="w-14 btn btn-ghost btn-circle avatar">
+        <div class=" rounded-full">
           <img
             alt="Tailwind CSS Navbar component"
             src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
