--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,6 +1,16 @@
-<section class="grid gap-2 sm:grid-cols-12 sm:grid-rows-12">
-  <app-header class="col-span-12 row-span-1"></app-header>
-  <app-sidebar class="col-span-2 row-span-11"></app-sidebar>
-  <app-table class="col-span-10 row-span-11"></app-table>
-  <app-footer class="col-span-12 row-span-1"></app-footer>
+<section class="bg-linear-to-r from-cyan-500 to-green-500 shadow-sm px-5 py-5 box-border">
+  <app-header class=""></app-header>
+  <div class="flex">
+    <app-sidebar
+      [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
+      (changeIsLeftSidebarCollapsed)="changeIsLeftSidebarCollapsed($event)"
+    />
+
+    <app-main
+      [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
+      [_screenWidth]="screenWidth()"
+    />
+
+  </div>
+  <app-footer class=""></app-footer>
 </section>
