--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,11 +1,11 @@
-<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 shadow-sm px-5 py-5">
+<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 px-5 py-5">
   <div class="flex-1">
     <figure>
       <img class="w-25" src="/cirsub.png" alt="">
     </figure>
   </div>
   <div class="flex items-center gap-2">
-    <p class="font-semibold text-white text-lg drop-shadow-lg">Marcos Lopez</p>
+    <p class="font-semibold text-white text-lg drop-shadow-lg">Amalia Noguera</p>
     <div class="dropdown dropdown-end  rounded-sm">
       <div tabindex="0" role="button" class="w-14 btn btn-ghost btn-circle avatar">
         <div class=" rounded-full">
