--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,5 +1,5 @@
-<section class="mx-1">
-  <div class="px-7 py-5 max-w-screen border-2 border-green-300 rounded-4xl">
+<section class="mx-1 max-w-6xl bg-white rounded-2xl">
+  <div class="px-7 py-5 max-w-screen ">
     <div class="flex justify-between mb-5">
       <input pInputText type="text" (input)="filtrarGlobal($event)" placeholder="Buscar..." class="p-5" />
       <button type="button" class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary-700 bg-green-500 cursor-pointer hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">
