--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -1,18 +1,17 @@
-<div class="flex justify-center items-center w-[85vw] h-[70vh] ">
-  <div class="card bg-base-100 w-xl shadow-sm flex justify-between">
-    <div class="flex justify-between items-center p-5  bg-emerald-800 rounded-2xl">
-      <svg class="z-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#00BACD" fill-opacity="1" d="M0,32L120,80C240,128,480,224,720,234.7C960,245,1200,171,1320,133.3L1440,96L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
-      </svg>
-      <figure>
-
-        <img class="w-20" src="/cirsub.png" alt="">
-      </figure>
-      <div>
-        <p class="text-white text-right text-base font-semibold">CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL</p>
+<div class="flex justify-center items-center w-[85vw] h-[70vh]" >
+  <div class="card bg-base-100 w-xlflex justify-between drop-shadow-2xl" #credencialCard>
+    <div class="flex justify-between items-center  rounded-2xl">
+      <svg class="static" width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00c951"></stop><stop offset="95%" stop-color="#00b8da"></stop></linearGradient></defs><path d="M 0,400 L 0,150 C 143.32142857142856,140.17857142857144 286.6428571428571,130.35714285714286 402,132 C 517.3571428571429,133.64285714285714 604.7499999999999,146.75000000000003 707,158 C 809.2500000000001,169.24999999999997 926.3571428571429,178.64285714285714 1051,177 C 1175.642857142857,175.35714285714286 1307.8214285714284,162.67857142857144 1440,150 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path></svg>
+      <div class=" w-full p-5 absolute top-0 flex justify-between items-center">
+        <figure>
+          <img class="w-25" src="/cirsub.png" alt="">
+        </figure>
+        <div>
+          <p class="text-white text-right text-sm font-semibold">CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL ARGENTINA</p>
+        </div>
       </div>
     </div>
-    <div class="flex justify-start items-center p-5">
+    <div class="flex justify-between items-center px-16">
       <figure>
         <div tabindex="0" role="button" class="w-40 h-40 btn btn-ghost btn-circle avatar mr-5">
           <div class=" rounded-full">
@@ -22,14 +21,30 @@
           </div>
         </div>
       </figure>
-      <div class="w-80">
-        <ul class="block">
-          <li class="text-center mb-3 font-semibold text-2xl">Amalia Noguera</li>
-          <li class="text-xl">DNI: 348569</li>
-          <li class="text-xl">CE: 84308</li>
-          <li class="text-xl">FILIAL: CENTRO</li>
-        </ul>
+      <div class="w-80 ml-5">
+        <div>
+          <ul class="block">
+            <li class="text-center mb-3 font-semibold text-2xl bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Norma Rodriguez</li>
+            <li class="text-xl"><span class="font-semibold">DNI:</span> 3485690</li>
+            <li class="text-xl"><span class="font-semibold">N° SOCIO:</span> 84308</li>
+            <li class="text-xl"><span class="font-semibold">FILIAL:</span> CENTRO</li>
+          </ul>
+
+        </div>
       </div>
     </div>
+    <div class="qr-container flex justify-between items-end px-5 pb-5" *ngIf="qrUrl">
+      <p class="text-sm text-gray-500 font-base">La presente credencial solo es válida presentando el DNI</p>
+      <img class="w-20 border-b-cyan-800" [src]="qrUrl" alt="QR del usuario" />
+    </div>
 </div>
+</div>
+<div class="flex justify-center mt-10 w-[85vw]">
+  <button (click)="downloadImage()" class="btn font-semibold text-lg text-white btn-outline border-2 hover:bg-cyan-500">Descargar Credencial</button>
+</div>
+
+
+
+
+
 
