--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -7,7 +7,7 @@
           <img class="w-25" src="/cirsub.png" alt="">
         </figure>
         <div>
-          <p class="text-white text-right text-sm font-semibold">CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL ARGENTINA</p>
+          <p class="text-white text-right text-sm font-semibold">MUTUAL CIRCULO DE SUBOFICIALES DE <br> GENDARMERIA NACIONAL ARGENTINA</p>
         </div>
       </div>
     </div>
