--- a/src/app/admin/pages/nuevo-tramite/nuevo-tramite.component.html
+++ b/src/app/admin/pages/nuevo-tramite/nuevo-tramite.component.html
@@ -1,6 +1,12 @@
 <div class="w-[85vw] bg-white h-[100vh] pt-10">
   <div class="card">
-    <p-steps [model]="items" [readonly]="false" />
+    <ul class="steps">
+      <li class="step step-primary">Register</li>
+      <li class="step step-success">Choose plan</li>
+      <li class="step">Purchase</li>
+    </ul>
   </div>
   <router-outlet></router-outlet>
 </div>
+
+
