--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,17 +1,17 @@
-<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 px-5 py-5">
+<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 md:px-5 md:py-5">
   <div class="flex-1">
     <figure>
-      <img routerLink="/" class="w-25 cursor-pointer" src="/cirsub.png" alt="">
+      <img routerLink="/" class="md:w-25 w-20 cursor-pointer" src="/cirsub.png" alt="">
     </figure>
   </div>
   <div class="flex items-center gap-2">
-    <p class="font-semibold text-white text-lg drop-shadow-lg">Norma Rodriguez</p>
+    <p class="font-semibold text-white text-lg drop-shadow-lg">Julian Rodriguez</p>
     <div class="dropdown dropdown-end  rounded-sm">
       <div tabindex="0" role="button" class="w-14 btn btn-ghost btn-circle avatar">
         <div class=" rounded-full">
           <img
             alt="Tailwind CSS Navbar component"
-            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+            src="/avatar-gris.png" />
         </div>
       </div>
       <ul
@@ -22,7 +22,7 @@
             Perfil
           </a>
         </li>
-        <li><a>Settings</a></li>
+        <li><a>Configuración</a></li>
         <li><a class="font-bold text-red-500">Salir</a></li>
       </ul>
     </div>
