--- a/src/app/admin/pages/nuevo-tramite/nuevo-tramite.component.html
+++ b/src/app/admin/pages/nuevo-tramite/nuevo-tramite.component.html
@@ -1,9 +1,9 @@
 <div class="w-[85vw] bg-white h-[100vh] pt-10">
   <div class="card">
     <ul class="steps">
-      <li class="step step-primary">Register</li>
-      <li class="step step-success">Choose plan</li>
-      <li class="step">Purchase</li>
+      <li class="step step-primary">Detalle</li>
+      <li class="step step-success">Asignar responsable</li>
+      <li class="step">Finalizar</li>
     </ul>
   </div>
   <router-outlet></router-outlet>
