--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -5,12 +5,16 @@
         <figure>
           <img class="w-30 mb-2" src="cirsub.png" alt="">
         </figure>
+        <div *ngIf="user">
+          <h2 class="text-center text-lg font-bold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent"> Bienvenido {{  user?.Nombre }} {{ user?.Apellido}}</h2>
+        </div>
         <form class="w-54 m-auto" [formGroup]="formRegister" (ngSubmit)="sendRegister()" >
          <!--  <p-floatlabel class="mb-5" variant="on">
             <input class="w-full " formControlName="dni" pInputText id="labelFullName" autocomplete="off" />
             <label for="labelFullName">Número de documento</label>
           </p-floatlabel> -->
-          <fieldset class="fieldset">
+          <div *ngIf="visible">
+            <fieldset class="fieldset">
             <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su número de documento</legend>
             <label class="input input-success validator">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 20"><path fill="#999999" d="M4.5 4A2.5 2.5 0 0 0 2 6.5v7A2.5 2.5 0 0 0 4.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-7A2.5 2.5 0 0 0 15.5 4zM3 6.5A1.5 1.5 0 0 1 4.5 5h11A1.5 1.5 0 0 1 17 6.5v7a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 3 13.5zM4.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h8a.5.5 0 0 0 0-1zm.5 3a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1z"/></svg>
@@ -18,7 +22,9 @@
               <input formControlName="dni"  placeholder="0123456789" type="text" minlength="8" pattern="/^\d+$/" required/>
             </label>
           </fieldset>
-          <fieldset class="fieldset">
+          </div>
+          <div *ngIf="!visible">
+            <fieldset class="fieldset">
             <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su número de teléfono</legend>
             <label class="input input-success validator">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 8 8"><path fill="#999999" d="M1.19 0C1.08 0 1 .08 1 .19v7.63c0 .11.08.19.19.19h4.63c.11 0 .19-.08.19-.19V.19c0-.11-.08-.19-.19-.19zM2 1h3v5H2zm1.5 5.5c.28 0 .5.22.5.5s-.22.5-.5.5S3 7.28 3 7s.22-.5.5-.5"/></svg>
@@ -26,6 +32,14 @@
               <input formControlName="telefono"  type="text" placeholder="11111111" minlength="8" pattern="/^\d+$/" required/>
             </label>
           </fieldset>
+            <fieldset class="fieldset">
+            <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su email</legend>
+            <label class="input input-success validator">
+              <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></g></svg>
+              <input formControlName="email" autocomplete="new-password" type="email" placeholder="mail@cirsubgn.org" required/>
+            </label>
+          </fieldset>
+          </div>
           <div class="flex justify-center items-center mb-5 mt-5">
             <button type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Registrarme</button>
           </div>
