changed in the dashboard and card identifier component

--- a/src/app/admin/pages/credencial/credencial.component.html
+++ b/src/app/admin/pages/credencial/credencial.component.html
@@ -1,7 +1,7 @@
 <div class="flex justify-center items-center w-[85vw] h-[70vh]" >
   <div class="block">
 
-    <!-- <div class="card bg-base-100 w-xlflex justify-between drop-shadow-2xl" #credencialCard>
+    <div class="card bg-base-100 w-xlflex justify-between drop-shadow-2xl" #credencialCard>
       <div class="flex justify-between items-center  rounded-2xl">
         <svg class="static" width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00c951"></stop><stop offset="95%" stop-color="#00b8da"></stop></linearGradient></defs><path d="M 0,400 L 0,150 C 143.32142857142856,140.17857142857144 286.6428571428571,130.35714285714286 402,132 C 517.3571428571429,133.64285714285714 604.7499999999999,146.75000000000003 707,158 C 809.2500000000001,169.24999999999997 926.3571428571429,178.64285714285714 1051,177 C 1175.642857142857,175.35714285714286 1307.8214285714284,162.67857142857144 1440,150 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path></svg>
         <div class=" w-full p-5 absolute top-0 flex justify-between items-center">
@@ -38,8 +38,8 @@
         <p class="text-sm text-gray-500 font-base">La presente credencial solo es válida presentando el DNI</p>
         <img class="w-20 border-b-cyan-800" [src]="qrUrl" alt="QR del usuario" />
       </div>
-    </div> -->
-    <div class="card bg-base-100 w-2xl justify-between drop-shadow-2xl" #credencialCard>
+    </div>
+    <!-- <div class="card bg-base-100 w-2xl justify-between drop-shadow-2xl" #credencialCard>
       <div class="flex justify-between items-center  rounded-2xl">
         <svg class="static" width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#00c951"></stop><stop offset="95%" stop-color="#00b8da"></stop></linearGradient></defs><path d="M 0,400 L 0,150 C 143.32142857142856,140.17857142857144 286.6428571428571,130.35714285714286 402,132 C 517.3571428571429,133.64285714285714 604.7499999999999,146.75000000000003 707,158 C 809.2500000000001,169.24999999999997 926.3571428571429,178.64285714285714 1051,177 C 1175.642857142857,175.35714285714286 1307.8214285714284,162.67857142857144 1440,150 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 200)"></path></svg>
         <div class=" w-full p-5 absolute top-0 flex justify-between items-center">
@@ -75,7 +75,7 @@
       <div class="qr-container flex justify-between items-end px-5 pb-5" *ngIf="qrUrl">
         <p class="text-sm text-gray-500 font-base">La presente credencial solo es válida presentando el DNI</p>
       </div>
-  </div>
+  </div> -->
   </div>
 </div>
 <div class="flex justify-center mt-10 w-[85vw]">
