--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-linear-to-r from-cyan-500 to-green-500 md:px-5 md:py-5">
+<div class="navbar  md:px-5 md:py-5">
   <div class="flex-1">
     <figure>
       <img routerLink="/" class="md:w-25 w-20 cursor-pointer" src="/cirsub.png" alt="">
