--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<section class="bg-linear-to-r from-cyan-500 to-green-500 shadow-sm px-5 py-5 box-border">
+<section class="bg-linear-to-r shadow-sm px-5 py-5 box-border">
   <app-header class=""></app-header>
   <div class="flex">
-    <app-sidebar
+    <!-- <app-sidebar
       [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
       (changeIsLeftSidebarCollapsed)="changeIsLeftSidebarCollapsed($event)"
-    />
+    /> -->
 
     <app-main
       [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
