credential in course

--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,16 +1,7 @@
 <section class="bg-linear-to-r shadow-sm px-5 py-5 box-border">
   <app-header class=""></app-header>
-  <div class="flex">
-    <!-- <app-sidebar
-      [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
-      (changeIsLeftSidebarCollapsed)="changeIsLeftSidebarCollapsed($event)"
-    /> -->
-
-    <app-main
-      [isLeftSidebarCollapsed]="isLeftSidebarCollapsed()"
-      [_screenWidth]="screenWidth()"
-    />
-
+  <div>
+    <router-outlet></router-outlet>
   </div>
   <app-footer class=""></app-footer>
 </section>
