--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,8 @@
 <footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded mt-5 p-10">
   <nav class="grid grid-flow-col gap-4">
-    <a class="link link-hover">About us</a>
-    <a class="link link-hover">Contact</a>
-    <a class="link link-hover">Jobs</a>
-    <a class="link link-hover">Press kit</a>
+    <a class="link link-hover">Quienes somos</a>
+    <a class="link link-hover">Preguntas frecuentes</a>
+    <a class="link link-hover">Términos y condiciones</a>
   </nav>
   <nav>
     <div class="grid grid-flow-col gap-4">
