credential in production

--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <section class="bg-linear-to-r shadow-sm px-5 py-5 box-border">
-  <app-header class=""></app-header>
+  <!-- <app-header class=""></app-header> -->
   <div>
     <router-outlet></router-outlet>
   </div>
