--- a/src/app/admin/components/estadia/estadia.component.html
+++ b/src/app/admin/components/estadia/estadia.component.html
@@ -1,1 +1,3 @@
-<p>estadia works!</p>
+<div class="max-h-28 min-h-28 flex justify-center items-center">
+  <p class="text-4xl font-bold text-purple-800">15/45</p>
+</div>
