--- a/src/app/admin/components/extractomovimientos/extractomovimientos.component.html
+++ b/src/app/admin/components/extractomovimientos/extractomovimientos.component.html
@@ -1,1 +1,29 @@
-<p>extractomovimientos works!</p>
+<div class="flex flex-col h-28  overflow-hidden mt-1 mb-2 mx-4">
+  <div class="overflow-y-auto flex-grow custom-scrollbar">
+    <table class="min-w-full divide-y divide-gray-200 w-full">
+      <thead class="bg-gray-50 sticky top-0 z-10">
+        <tr>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            CONCEPTO
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            DETALLE
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.5rem] text-gray-500 uppercase tracking-wider">
+            IMPORTE
+          </th>
+        </tr>
+      </thead>
+      <tbody class="bg-white divide-y divide-gray-200">
+        <tr *ngFor="let movimiento of movimientos" class="hover:bg-gray-50">
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-900 w-[10%]">{{ movimiento.concepto }}</td>
+          <td class="px-3 py-2 text-[0.6rem] text-gray-600  w-[50%]">{{movimiento.detalle}}</td>
+          <td class="px-3 py-2 text-[0.6rem] text-gray-600  w-[40%]">$ {{movimiento.monto}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+
