--- a/src/app/admin/components/farmacia/farmacia.component.html
+++ b/src/app/admin/components/farmacia/farmacia.component.html
@@ -1,1 +1,37 @@
-<p>farmacia works!</p>
+<p class="text-xs text-cyan-700 font-semibold text-center mt-1">Reintegro de farmacia <span class="text-orange-700">2/6</span></p>
+<div class="flex flex-col h-24  overflow-hidden mx-1 mt-1 mb-2">
+  <div class="overflow-y-auto flex-grow custom-scrollbar">
+    <table class="min-w-full divide-y divide-gray-200">
+      <thead class="bg-gray-50 sticky top-0 z-10">
+        <tr>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.4rem] text-gray-500 uppercase tracking-wider">
+            FECHA RECETA
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.4rem] text-gray-500 uppercase tracking-wider">
+            FECHA FACTURA
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.4rem] text-gray-500 uppercase tracking-wider">
+            IMPORTE REINTEGRO
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.4rem] text-gray-500 uppercase tracking-wider">
+            FECHA CARGA
+          </th>
+          <th scope="col" class="px-3 py-2 text-left font-semibold text-[0.4rem] text-gray-500 uppercase tracking-wider">
+            FECHA REINTEGRO
+          </th>
+        </tr>
+      </thead>
+      <tbody class="bg-white divide-y divide-gray-200">
+        <tr *ngFor="let farmacia of reintegroFarmacia" class="hover:bg-gray-50">
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-900 w-[10%]">{{ farmacia.fechaReceta }}</td>
+          <td class="px-3 py-2 text-[0.6rem] text-gray-600  w-[50%] max-w-[30%]">{{farmacia.fechaFactura}}</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[20%]">$ {{farmacia.importeReintegro}}</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[10%]">{{farmacia.fechaCarga}}</td>
+          <td class="px-3 py-2 whitespace-nowrap text-[0.6rem] text-gray-500 w-[10%]">{{farmacia.fechaReintegro}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
