--- a/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
+++ b/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
@@ -5,7 +5,7 @@
         <div class=" rounded-full relative">
           <img
             alt="Tailwind CSS Navbar component"
-            src="/avatar.png" />
+            [src]="imagenUrl" *ngIf="imagenUrl" />
         </div>
         <div class="absolute bg-white shadow-sm shadow-gray-300 rounded-full p-[0.1rem] -bottom-[0.1rem] right-1">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path fill="#0891B2" d="M16.293 2.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1 0 1.414l-13 13A1 1 0 0 1 8 21H4a1 1 0 0 1-1-1v-4a1 1 0 0 1 .293-.707l10-10zM14 7.414l-9 9V19h2.586l9-9zm4 1.172L19.586 7L17 4.414L15.414 6z"/></svg>
@@ -15,10 +15,10 @@
     <div class="w-auto">
       <div>
         <ul class="block text-center">
-          <li class="w-full text-center font-semibold text-lg bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Marcos López</li>
+          <li class="w-full text-center font-semibold text-lg bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">{{ autService.user()?.Persona![0].Nombre!}} {{autService.user()?.Persona![0].Apellido}}</li>
           <li x-ms-format-detection="none"
           data-format-detection="false"
-          style="text-decoration: none;" class="text-sm font-semibold text-gray-500 no-underline"><span class=" font-semibold text-gray-500">DNI:</span> 34824092</li>
+          style="text-decoration: none;" class="text-sm font-semibold text-gray-500 no-underline"><span class=" font-semibold text-gray-500">DNI:</span> {{autService.user()?.Persona![0].Documento}}</li>
         </ul>
       </div>
     </div>
