--- a/src/app/admin/components/sepelio/sepelio.component.html
+++ b/src/app/admin/components/sepelio/sepelio.component.html
@@ -1,1 +1,6 @@
-<p>sepelio works!</p>
+
+  <div class="max-h-28 min-h-28 flex flex-col justify-center items-center mt-2">
+    <p class="text-gray-400">Usted no se encuentra adherido a este servicio.</p>
+    <p class="text-gray-400">¿Desea adherirse?</p>
+    <button class="button bg-teal-500 px-2 py-2 rounded-2xl text-white mt-4">Adherirme</button>
+  </div>
