--- a/src/app/auth/pages/otp/otp.component.html
+++ b/src/app/auth/pages/otp/otp.component.html
@@ -42,7 +42,7 @@
 
   <button type="submit"
           [disabled]="formOtp.invalid"
-          class="w-full max-w-xs px-4 py-3 mt-4 font-semibold text-white bg-green-600 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 cursor-pointer disabled:bg-gray-400 disabled:cursor-not-allowed">
+          class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">
     Verificar Código
   </button>
 </form>
