--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -5,9 +5,8 @@
         <figure>
           <img class="w-30 mb-2" src="cirsub.png" alt="">
         </figure>
-        <div *ngIf="user && !repass">
-          <h2 class="text-center text-lg font-bold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent"> Bienvenido {{ user?.Nombre }} {{ user?.Apellido}}</h2>
-          <h4 class="text-center text-xs  font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese el código de 4 dígitos que le enviamos al whatsapp</h4>
+        <div *ngIf="user && !repass && !avatar">
+          <h4 class="text-center text-xs  font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese el código de 4 dígitos que le enviamos por whatsapp</h4>
         </div>
         <form *ngIf="visible"  class="w-54 m-auto" [formGroup]="formRegister" (ngSubmit)="sendRegister()">
           <div >
@@ -98,7 +97,7 @@
             </button>
           </div>
         </form>
-        <div *ngIf="!visible && !repass" class="card-body">
+        <div *ngIf="!visible && !repass && !avatar" class="card-body">
 
           <form [formGroup]="formOtp" (ngSubmit)="sendOtp()" class="flex flex-col items-center gap-8">
 
@@ -225,9 +224,64 @@
               </button>
             </div>
           </form>
-
-
          </div>
+
+         <!-- captured image -->
+
+        <div *ngIf="!repass && avatar" class="p-6 max-w-md mx-auto bg-white rounded-xl  space-y-4">
+          <div class="flex justify-center">
+            <!-- Video solo si no hay imagen capturada -->
+            <video
+              *ngIf="!capturedImage"
+              #videoElement
+              autoplay
+              muted
+              playsinline
+              class="rounded-lg w-full max-w-sm aspect-square object-cover -scale-x-100"
+            ></video>
+
+            <!-- Imagen capturada -->
+            <img
+              *ngIf="capturedImage"
+              [src]="capturedImage"
+              alt="Avatar"
+              class="rounded-lg w-full max-w-sm aspect-square object-cover border"
+            />
+          </div>
+
+          <div class="flex justify-center space-x-4">
+            <button
+              *ngIf="!capturedImage"
+              (click)="capturePhoto()"
+              class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-violet-500"
+            >
+            Tomar Foto
+            <svg class="ml-2" xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#ffffff" d="M4 4h3l2-2h6l2 2h3a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2m8 3a5 5 0 0 0-5 5a5 5 0 0 0 5 5a5 5 0 0 0 5-5a5 5 0 0 0-5-5m0 2a3 3 0 0 1 3 3a3 3 0 0 1-3 3a3 3 0 0 1-3-3a3 3 0 0 1 3-3"/></svg>
+            </button>
+
+            <button
+              *ngIf="capturedImage"
+              (click)="retakePhoto()"
+              class="btn btn-success text-white bg-linear-to-r from-red-500 to-yellow-500"
+            >
+              Nueva foto
+              <svg class="ml-2" xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 20 20"><path fill="#ffffff" d="M10.2 3.28c3.53 0 6.43 2.61 6.92 6h2.08l-3.5 4l-3.5-4h2.32a4.44 4.44 0 0 0-4.32-3.45c-1.45 0-2.73.71-3.54 1.78L4.95 5.66a6.97 6.97 0 0 1 5.25-2.38m-.4 13.44c-3.52 0-6.43-2.61-6.92-6H.8l3.5-4c1.17 1.33 2.33 2.67 3.5 4H5.48a4.44 4.44 0 0 0 4.32 3.45c1.45 0 2.73-.71 3.54-1.78l1.71 1.95a6.95 6.95 0 0 1-5.25 2.38"/></svg>
+            </button>
+
+            <button
+            (click)="updateProfile()"
+            [disabled]="!capturedImage"
+            class="font-semibold btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500"
+            >
+            Guardar
+            <svg class="ml-2" xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 24 24"><path fill="#ffffff" d="M5 21h14a2 2 0 0 0 2-2V8a1 1 0 0 0-.29-.71l-4-4A1 1 0 0 0 16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2m10-2H9v-5h6zM13 7h-2V5h2zM5 5h2v4h8V5h.59L19 8.41V19h-2v-5a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v5H5z"/></svg>
+            </button>
+          </div>
+
+          <!-- Canvas oculto -->
+          <canvas #canvas class="hidden"></canvas>
+        </div>
+
 
       </div>
       <p class="text-center text-gray-400 font-sans">Ya tiene una cuenta? <a routerLink="/auth/login" class="font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Iniciar sesión</a></p>
