last update front cirsub

--- a/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
+++ b/src/app/admin/components/personal-date-credential/personal-date-credential.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between items-center w-full px-2">
   <div class=" flex justify-start items-center w-3/4">
-    <figure class="w-auto pr-2 pb-2">
+    <figure routerLink="/auth/avatar-profile" class="w-auto pr-2 pb-2">
       <div tabindex="0" role="button" class="w-22 h-22 btn btn-ghost btn-circle avatar">
         <div class=" rounded-full relative">
           <img
