--- a/src/app/auth/pages/repassword/repassword.component.html
+++ b/src/app/auth/pages/repassword/repassword.component.html
@@ -7,19 +7,59 @@
         </figure>
         <form [formGroup]="repasswordForm" (ngSubmit)="onSubmit()">
           <fieldset class="fieldset">
+              <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Ingrese su número de documento</legend>
+              <label class="input input-success validator">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 20"><path fill="#999999" d="M4.5 4A2.5 2.5 0 0 0 2 6.5v7A2.5 2.5 0 0 0 4.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-7A2.5 2.0 0 0 0 15.5 4zM3 6.5A1.5 1.5 0 0 1 4.5 5h11A1.5 1.5 0 0 1 17 6.5v7a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 3 13.5zM4.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1zm0 2a.5.5 0 0 0 0 1h8a.5.5 0 0 0 0-1zm.5 3a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1z"/></svg>
+                <input
+                class="placeholder:text-gray-300"
+                  formControlName="dni"
+                  placeholder="0123456789"
+                  type="text"
+                  maxlength="10"
+                  (keypress)="omitirNoNumeros($event)"
+                />
+              </label>
+              <div *ngIf="dniControl.invalid && formSubmitted" style="margin-top: 5px;">
+                <div *ngIf="dniControl.errors?.['required']" class="text-red-500 text-sm">
+                  El DNI es obligatorio.
+                </div>
+                <div *ngIf="dniControl.errors?.['minlength']" class="text-red-500 text-sm">
+                  El DNI debe tener al menos {{ dniControl.errors?.['minlength']?.requiredLength }} dígitos.
+                </div>
+                <div *ngIf="dniControl.errors?.['pattern']" class="text-red-500 text-sm">
+                  Solo se permiten números en el DNI.
+                </div>
+              </div>
+              <div *ngIf="error" class="text-red-500 text-sm mt-2">
+                {{ error }}
+              </div>
+            </fieldset>
+          <fieldset class="fieldset">
             <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Nueva contraseña</legend>
             <label class="input input-success validator">
               <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z"></path><circle cx="16.5" cy="7.5" r=".5" fill="currentColor"></circle></g></svg>
-              <input formControlName="password" autocomplete="new-password" type="password" required placeholder="Ingrese su nueva contraseña"/>
+              <input [class.input-error]="password?.invalid && password?.touched" class="placeholder:text-gray-300" formControlName="password" autocomplete="new-password" type="password" required placeholder="Ingrese su nueva contraseña"/>
             </label>
+            <div *ngIf="password?.touched && password?.invalid" class="mt-1 text-error text-sm">
+                <p *ngIf="password?.errors?.['required']">La contraseña es obligatoria.</p>
+                <p *ngIf="password?.errors?.['pattern']">
+                  Mínimo 8 caracteres, una mayúscula, una minúscula y un símbolo.
+                </p>
+              </div>
           </fieldset>
           <fieldset class="fieldset mb-2">
             <legend class="fieldset-legend font-semibold bg-linear-to-r from-cyan-500 to-green-500 bg-clip-text text-transparent">Reingrese su contraseña</legend>
             <label class="input input-success validator">
               <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z"></path><circle cx="16.5" cy="7.5" r=".5" fill="currentColor"></circle></g></svg>
-            <input formControlName="repassword" autocomplete="new-password"  type="password" required placeholder="Reingrese su nueva contraseña" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
+            <input [class.input-error]="(confirmPassword?.touched && confirmPassword?.invalid) || (repasswordForm.errors?.['passwordsMismatch'] && confirmPassword?.touched)" class="placeholder:text-gray-300" formControlName="repassword" autocomplete="new-password"  type="password" required placeholder="Reingrese su nueva contraseña" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
             </label>
           </fieldset>
+          <div *ngIf="confirmPassword?.touched && confirmPassword?.invalid" class="mt-1 text-error text-sm">
+                <p *ngIf="confirmPassword?.errors?.['required']">Este campo es obligatorio.</p>
+              </div>
+              <div *ngIf="repasswordForm.errors?.['passwordsMismatch'] && confirmPassword?.touched" class="mt-1 text-error text-sm">
+                <p>Las contraseñas no coinciden.</p>
+              </div>
           <div class="flex justify-center items-center mb-5 mt-5">
             <button type="submit" class="btn btn-success text-white bg-linear-to-r from-cyan-500 to-green-500">Aceptar</button>
           </div>
